Modification des métrics

--- a/RDF_ALGO.ipynb
+++ b/RDF_ALGO.ipynb
@@ -29,9 +29,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import pandas as pd\n",
+    "import numpy as np\n",
     "from mlflow import MlflowClient\n",
     "from pprint import pprint\n",
-    "from sklearn.ensemble import RandomForestRegressor"
+    "from sklearn.ensemble import RandomForestClassifier"
    ]
   },
   {
@@ -42,12 +44,13 @@
    "outputs": [],
    "source": [
     "# Configuration de mon Mlflow sur un server local \n",
-    "!mlflow server --host 127.0.0.1 --port 8080"
+    "# à exéuter dans le terminal\n",
+    "#!mlflow server --host 127.0.0.1 --port 8080"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "id": "7ae5d0bd",
    "metadata": {},
    "outputs": [],
@@ -58,10 +61,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "id": "1d90c317",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[<Experiment: artifact_location='mlflow-artifacts:/0', creation_time=1760395304471, experiment_id='0', last_update_time=1760395304471, lifecycle_stage='active', name='Default', tags={}>]\n"
+     ]
+    }
+   ],
    "source": [
     "#Suivit des expériments\n",
     "all_experiments = ML.search_experiments()\n",
@@ -78,12 +89,191 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "id": "ca058e8c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[]"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ML.search_experiments(filter_string=\"name = 'RDF_Models'\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "5779b97c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   person_age  person_income person_home_ownership  person_emp_length loan_intent loan_grade  loan_amnt  loan_int_rate  loan_status  loan_percent_income cb_person_default_on_file  cb_person_cred_hist_length\n",
+      "0          22          59000                  RENT              123.0    PERSONAL          D      35000          16.02            1                 0.59                         Y                           3\n",
+      "1          21           9600                   OWN                5.0   EDUCATION          B       1000          11.14            0                 0.10                         N                           2\n",
+      "2          25           9600              MORTGAGE                1.0     MEDICAL          C       5500          12.87            1                 0.57                         N                           3\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Import de la donnée\n",
+    "data_dir = r\"C:\\Users\\j_aka\\Desktop\\mlops\\credit_risk_dataset.csv\"\n",
+    "df = pd.read_csv(data_dir, delimiter=\",\") \n",
+    "print(df.head(3).to_string())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "95e2115a",
    "metadata": {},
    "outputs": [],
    "source": [
-    "ML.search_experiments(filter_string=\"name = 'RDF_Models'\")"
+    "## Import de librairie\n",
+    "import mlflow\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "from sklearn.metrics import mean_absolute_error, mean_squared_error, r2_score"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "6c725523",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## Connection Mlflow \n",
+    "# This function call sets the global tracking URI for the current session.\n",
+    "# It’s a convenient way to configure the tracking server URI without creating a separate client instance.\n",
+    "\n",
+    "mlflow.set_tracking_uri(\"http://127.0.0.1:8080\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "a4039a5f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2025/10/14 00:57:54 INFO mlflow.tracking.fluent: Experiment with name 'RDF_Models' does not exist. Creating a new experiment.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Sets the current active experiment to the \"Apple_Models\" experiment and\n",
+    "# returns the Experiment metadata\n",
+    "RDF_experiment = mlflow.set_experiment(\"RDF_Models\")\n",
+    "\n",
+    "# Define a run name for this iteration of training.\n",
+    "# If this is not set, a unique name will be auto-generated for your run.\n",
+    "run_name = \"RDF_rf_test\"\n",
+    "\n",
+    "# Define an artifact path that the model will be saved to.\n",
+    "artifact_path = \"RDF_apples\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "771710da",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\j_aka\\AppData\\Local\\Temp\\ipykernel_36128\\345315044.py:7: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  X[\"loan_grade\"] = X[\"loan_grade\"].map(grade_map)\n",
+      "2025/10/14 00:58:20 WARNING mlflow.models.model: `artifact_path` is deprecated. Please use `name` instead.\n",
+      "c:\\Users\\j_aka\\anaconda3\\envs\\statistique\\Lib\\site-packages\\mlflow\\types\\utils.py:452: UserWarning: Hint: Inferred schema contains integer column(s). Integer columns in Python cannot represent missing values. If your input data contains missing values at inference time, it will be encoded as floats and will cause a schema enforcement error. The best way to avoid this problem is to infer the model schema based on a realistic data sample (training dataset) that includes missing values. Alternatively, you can declare integer columns as doubles (float64) whenever these columns may have missing values. See `Handling Integers With Missing Values <https://www.mlflow.org/docs/latest/models.html#handling-integers-with-missing-values>`_ for more details.\n",
+      "  warnings.warn(\n",
+      "c:\\Users\\j_aka\\anaconda3\\envs\\statistique\\Lib\\site-packages\\mlflow\\types\\utils.py:452: UserWarning: Hint: Inferred schema contains integer column(s). Integer columns in Python cannot represent missing values. If your input data contains missing values at inference time, it will be encoded as floats and will cause a schema enforcement error. The best way to avoid this problem is to infer the model schema based on a realistic data sample (training dataset) that includes missing values. Alternatively, you can declare integer columns as doubles (float64) whenever these columns may have missing values. See `Handling Integers With Missing Values <https://www.mlflow.org/docs/latest/models.html#handling-integers-with-missing-values>`_ for more details.\n",
+      "  warnings.warn(\n",
+      "c:\\Users\\j_aka\\anaconda3\\envs\\statistique\\Lib\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n",
+      "Downloading artifacts: 100%|██████████| 7/7 [00:00<00:00, 1355.88it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "🏃 View run RDF_rf_test at: http://127.0.0.1:8080/#/experiments/137361489074130957/runs/78867c2977794726974ec4e819575dc5\n",
+      "🧪 View experiment at: http://127.0.0.1:8080/#/experiments/137361489074130957\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Split the data into features and target and drop irrelevant date field and target field\n",
+    "#X = df.drop(columns=[\"loan_percent_income\", \"loan_int_rate\",\"loan_grade\"])\n",
+    "X = df[[\"loan_percent_income\", \"loan_int_rate\", \"loan_grade\"]]\n",
+    "y = df[\"loan_status\"]\n",
+    "\n",
+    "grade_map = {'A': 1, 'B': 2, 'C': 3, 'D': 4, 'E': 5, 'F': 6, 'G': 7}\n",
+    "X[\"loan_grade\"] = X[\"loan_grade\"].map(grade_map)\n",
+    "\n",
+    "# Split the data into training and validation sets\n",
+    "X_train, X_val, y_train, y_val = train_test_split(X, y, test_size=0.2, random_state=42)\n",
+    "\n",
+    "params = {\n",
+    "    \"n_estimators\": 100,\n",
+    "    \"max_depth\": 6,\n",
+    "    \"min_samples_split\": 10,\n",
+    "    \"min_samples_leaf\": 4,\n",
+    "    \"bootstrap\": True,\n",
+    "    \"oob_score\": False,\n",
+    "    \"random_state\": 888,\n",
+    "}\n",
+    "\n",
+    "# Train the RandomForestclassifier\n",
+    "rf = RandomForestClassifier(**params)\n",
+    "\n",
+    "# Fit the model on the training data\n",
+    "rf.fit(X_train, y_train)\n",
+    "\n",
+    "# Predict on the validation set\n",
+    "y_pred = rf.predict(X_val)\n",
+    "\n",
+    "# Calculate error metrics\n",
+    "mae = mean_absolute_error(y_val, y_pred)\n",
+    "mse = mean_squared_error(y_val, y_pred)\n",
+    "rmse = np.sqrt(mse)\n",
+    "r2 = r2_score(y_val, y_pred)\n",
+    "\n",
+    "# Assemble the metrics we're going to write into a collection\n",
+    "metrics = {\"mae\": mae, \"mse\": mse, \"rmse\": rmse, \"r2\": r2}\n",
+    "\n",
+    "# Initiate the MLflow run context\n",
+    "with mlflow.start_run(run_name=run_name) as run:\n",
+    "    # Log the parameters used for the model fit\n",
+    "    mlflow.log_params(params)\n",
+    "\n",
+    "    # Log the error metrics that were calculated during validation\n",
+    "    mlflow.log_metrics(metrics)\n",
+    "\n",
+    "    # Log an instance of the trained model for later use\n",
+    "    mlflow.sklearn.log_model(\n",
+    "        sk_model=rf, input_example=X_val, artifact_path=artifact_path\n",
+    "    )\n"
    ]
   }
  ],
