J'ai garder mes hyperparamètres et modifier les donnée d'entrées X de mon modèle , en prenant en compte toutes les colonnes sauf la colonne target

--- a/RDF_ALGO.ipynb
+++ b/RDF_ALGO.ipynb
@@ -295,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "id": "771710da",
    "metadata": {},
    "outputs": [
@@ -330,10 +330,9 @@
    ],
    "source": [
     "# Définition des Features et de la cible \n",
-    "\n",
-    "X = df[[\"loan_percent_income\", \"loan_int_rate\", \"loan_grade\"]].copy()\n",
-    "y = df[\"loan_status\"]\n",
-    "\n",
+    "target_col = 'loan_status'\n",
+    "X = df.drop(columns=['loan_status'])        # les features que tu veux utiliser\n",
+    "y = df['loan_status']\n",
     "\n",
     "# Split des données \n",
     "X_train, X_val, y_train, y_val = train_test_split(X, y, test_size=0.2, random_state=42)\n",
