J'ai garder mes hyperparamètres et modifier les donnée d'entrées X de mon modèle , en prenant en compte toutes les colonnes sauf la colonne target maj

--- a/RDF_ALGO.ipynb
+++ b/RDF_ALGO.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 22,
    "id": "5d0cc351",
    "metadata": {},
    "outputs": [
@@ -158,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 23,
    "id": "5f06e5e8",
    "metadata": {},
    "outputs": [],
@@ -174,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 24,
    "id": "718cc184",
    "metadata": {},
    "outputs": [],
@@ -186,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 25,
    "id": "7ae5d0bd",
    "metadata": {},
    "outputs": [],
@@ -200,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 26,
    "id": "1d90c317",
    "metadata": {},
    "outputs": [
@@ -221,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 27,
    "id": "ca058e8c",
    "metadata": {},
    "outputs": [
@@ -231,7 +231,7 @@
        "[<Experiment: artifact_location='mlflow-artifacts:/668826699846372727', creation_time=1760799130123, experiment_id='668826699846372727', last_update_time=1760799130123, lifecycle_stage='active', name='RDF_Models', tags={'mlflow.experimentKind': 'custom_model_development'}>]"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -251,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 28,
    "id": "95e2115a",
    "metadata": {},
    "outputs": [],
@@ -269,7 +269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 29,
    "id": "5779b97c",
    "metadata": {},
    "outputs": [
@@ -300,21 +300,15 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "🏃 View run agreeable-bat-608 at: http://127.0.0.1:8080/#/experiments/668826699846372727/runs/670e28d2c98947189fa74929cf75b6e4\n",
-      "🧪 View experiment at: http://127.0.0.1:8080/#/experiments/668826699846372727\n"
-     ]
-    },
-    {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2025/10/18 16:58:13 WARNING mlflow.models.model: `artifact_path` is deprecated. Please use `name` instead.\n",
+      "2025/10/18 17:09:43 WARNING mlflow.models.model: `artifact_path` is deprecated. Please use `name` instead.\n",
       "c:\\Users\\j_aka\\anaconda3\\envs\\statistique\\Lib\\site-packages\\mlflow\\types\\utils.py:452: UserWarning: Hint: Inferred schema contains integer column(s). Integer columns in Python cannot represent missing values. If your input data contains missing values at inference time, it will be encoded as floats and will cause a schema enforcement error. The best way to avoid this problem is to infer the model schema based on a realistic data sample (training dataset) that includes missing values. Alternatively, you can declare integer columns as doubles (float64) whenever these columns may have missing values. See `Handling Integers With Missing Values <https://www.mlflow.org/docs/latest/models.html#handling-integers-with-missing-values>`_ for more details.\n",
       "  warnings.warn(\n",
-      "Downloading artifacts: 100%|██████████| 7/7 [00:00<?, ?it/s]\n"
+      "c:\\Users\\j_aka\\anaconda3\\envs\\statistique\\Lib\\site-packages\\mlflow\\types\\utils.py:452: UserWarning: Hint: Inferred schema contains integer column(s). Integer columns in Python cannot represent missing values. If your input data contains missing values at inference time, it will be encoded as floats and will cause a schema enforcement error. The best way to avoid this problem is to infer the model schema based on a realistic data sample (training dataset) that includes missing values. Alternatively, you can declare integer columns as doubles (float64) whenever these columns may have missing values. See `Handling Integers With Missing Values <https://www.mlflow.org/docs/latest/models.html#handling-integers-with-missing-values>`_ for more details.\n",
+      "  warnings.warn(\n",
+      "Downloading artifacts: 100%|██████████| 7/7 [00:00<00:00, 333.24it/s]\n"
      ]
     },
     {
@@ -322,8 +316,8 @@
      "output_type": "stream",
      "text": [
       "✅ Modèle entraîné et logué dans MLflow avec succès.\n",
-      "📊 Métriques : {'accuracy': 0.8437931563602885, 'precision': 0.6453369639210347, 'recall': 0.6560553633217993, 'f1': 0.6506520247083047}\n",
-      "🏃 View run RDF_Run at: http://127.0.0.1:8080/#/experiments/668826699846372727/runs/217f78295fe04232a5226ab3369ae73d\n",
+      "📊 Métriques : {'accuracy': 0.9225103575264693, 'precision': 0.9776422764227642, 'recall': 0.6657439446366782, 'f1': 0.7920955125566077}\n",
+      "🏃 View run RDF_Run at: http://127.0.0.1:8080/#/experiments/668826699846372727/runs/0008aec9f64644d8a69679a27ec01dcc\n",
       "🧪 View experiment at: http://127.0.0.1:8080/#/experiments/668826699846372727\n"
      ]
     }
@@ -331,7 +325,7 @@
    "source": [
     "# Définition des Features et de la cible \n",
     "target_col = 'loan_status'\n",
-    "X = df.drop(columns=['loan_status'])        # les features que tu veux utiliser\n",
+    "X = df.drop(columns=['loan_status'])    \n",
     "y = df['loan_status']\n",
     "\n",
     "# Split des données \n",
@@ -406,7 +400,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 31,
    "id": "1e7b2d58",
    "metadata": {},
    "outputs": [],
