Supression de librairie en doublon et Rajout d'un bloc chargement de fichier

--- a/RDF_ALGO.ipynb
+++ b/RDF_ALGO.ipynb
@@ -163,13 +163,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "## Import de librairie\n",
     "import pandas as pd\n",
     "import mlflow\n",
     "from mlflow import MlflowClient\n",
-    "from pprint import pprint\n",
     "from sklearn.ensemble import RandomForestClassifier\n",
+    "from sklearn.compose import ColumnTransformer\n",
+    "from sklearn.preprocessing import OneHotEncoder\n",
+    "from sklearn.pipeline import Pipeline\n",
+    "from pprint import pprint\n",
     "from sklearn.model_selection import train_test_split\n",
-    "from sklearn.metrics import accuracy_score, classification_report, confusion_matrix"
+    "from sklearn.metrics import mean_absolute_error, mean_squared_error, r2_score\n",
+    "from sklearn.metrics import accuracy_score, precision_score, recall_score, f1_score"
    ]
   },
   {
@@ -243,28 +248,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f08e4888",
+   "id": "a867c2ad",
    "metadata": {},
    "source": [
-    "## Random Forest model"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 28,
-   "id": "95e2115a",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "## Import de librairie\n",
-    "import mlflow\n",
-    "from sklearn.model_selection import train_test_split\n",
-    "from sklearn.ensemble import RandomForestClassifier\n",
-    "from sklearn.compose import ColumnTransformer\n",
-    "from sklearn.preprocessing import OneHotEncoder\n",
-    "from sklearn.pipeline import Pipeline\n",
-    "from sklearn.metrics import mean_absolute_error, mean_squared_error, r2_score\n",
-    "from sklearn.metrics import accuracy_score, precision_score, recall_score, f1_score\n"
+    "## Chargement du fichier"
    ]
   },
   {
@@ -294,8 +281,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "f08e4888",
+   "metadata": {},
+   "source": [
+    "## Random Forest model"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "id": "771710da",
    "metadata": {},
    "outputs": [
