--- a/RGL_ALGO.ipynb
+++ b/RGL_ALGO.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 26,
    "id": "9a99b9fd",
    "metadata": {},
    "outputs": [
@@ -158,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 27,
    "id": "1e208dca",
    "metadata": {},
    "outputs": [],
@@ -180,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 28,
    "id": "1ee6a796",
    "metadata": {},
    "outputs": [],
@@ -193,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 29,
    "id": "aa9c2ff4",
    "metadata": {},
    "outputs": [
@@ -201,7 +201,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[<Experiment: artifact_location='mlflow-artifacts:/668826699846372727', creation_time=1760799130123, experiment_id='668826699846372727', last_update_time=1760799130123, lifecycle_stage='active', name='RDF_Models', tags={'mlflow.experimentKind': 'custom_model_development'}>, <Experiment: artifact_location='mlflow-artifacts:/0', creation_time=1760798921200, experiment_id='0', last_update_time=1760798921200, lifecycle_stage='active', name='Default', tags={}>]\n"
+      "[<Experiment: artifact_location='mlflow-artifacts:/389458555972686615', creation_time=1760804935652, experiment_id='389458555972686615', last_update_time=1760804935652, lifecycle_stage='active', name='RLG_Models', tags={'mlflow.experimentKind': 'custom_model_development'}>, <Experiment: artifact_location='mlflow-artifacts:/668826699846372727', creation_time=1760799130123, experiment_id='668826699846372727', last_update_time=1760799130123, lifecycle_stage='active', name='RDF_Models', tags={'mlflow.experimentKind': 'custom_model_development'}>, <Experiment: artifact_location='mlflow-artifacts:/0', creation_time=1760798921200, experiment_id='0', last_update_time=1760798921200, lifecycle_stage='active', name='Default', tags={}>]\n"
      ]
     }
    ],
@@ -214,17 +214,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 30,
    "id": "eb7e4ae9",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[]"
+       "[<Experiment: artifact_location='mlflow-artifacts:/389458555972686615', creation_time=1760804935652, experiment_id='389458555972686615', last_update_time=1760804935652, lifecycle_stage='active', name='RLG_Models', tags={'mlflow.experimentKind': 'custom_model_development'}>]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -244,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 31,
    "id": "add13bcb",
    "metadata": {},
    "outputs": [
@@ -286,23 +286,21 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "c:\\Users\\j_aka\\anaconda3\\envs\\statistique\\Lib\\site-packages\\sklearn\\linear_model\\_logistic.py:473: ConvergenceWarning: lbfgs failed to converge after 1000 iteration(s) (status=1):\n",
+      "c:\\Users\\j_aka\\anaconda3\\envs\\statistique\\Lib\\site-packages\\sklearn\\linear_model\\_logistic.py:473: ConvergenceWarning: lbfgs failed to converge after 2000 iteration(s) (status=1):\n",
       "STOP: TOTAL NO. OF ITERATIONS REACHED LIMIT\n",
       "\n",
-      "Increase the number of iterations to improve the convergence (max_iter=1000).\n",
+      "Increase the number of iterations to improve the convergence (max_iter=2000).\n",
       "You might also want to scale the data as shown in:\n",
       "    https://scikit-learn.org/stable/modules/preprocessing.html\n",
       "Please also refer to the documentation for alternative solver options:\n",
       "    https://scikit-learn.org/stable/modules/linear_model.html#logistic-regression\n",
       "  n_iter_i = _check_optimize_result(\n",
-      "2025/10/18 18:24:58 WARNING mlflow.models.model: `artifact_path` is deprecated. Please use `name` instead.\n",
+      "2025/10/18 18:36:53 WARNING mlflow.models.model: `artifact_path` is deprecated. Please use `name` instead.\n",
       "c:\\Users\\j_aka\\anaconda3\\envs\\statistique\\Lib\\site-packages\\mlflow\\types\\utils.py:452: UserWarning: Hint: Inferred schema contains integer column(s). Integer columns in Python cannot represent missing values. If your input data contains missing values at inference time, it will be encoded as floats and will cause a schema enforcement error. The best way to avoid this problem is to infer the model schema based on a realistic data sample (training dataset) that includes missing values. Alternatively, you can declare integer columns as doubles (float64) whenever these columns may have missing values. See `Handling Integers With Missing Values <https://www.mlflow.org/docs/latest/models.html#handling-integers-with-missing-values>`_ for more details.\n",
       "  warnings.warn(\n",
       "c:\\Users\\j_aka\\anaconda3\\envs\\statistique\\Lib\\site-packages\\mlflow\\types\\utils.py:452: UserWarning: Hint: Inferred schema contains integer column(s). Integer columns in Python cannot represent missing values. If your input data contains missing values at inference time, it will be encoded as floats and will cause a schema enforcement error. The best way to avoid this problem is to infer the model schema based on a realistic data sample (training dataset) that includes missing values. Alternatively, you can declare integer columns as doubles (float64) whenever these columns may have missing values. See `Handling Integers With Missing Values <https://www.mlflow.org/docs/latest/models.html#handling-integers-with-missing-values>`_ for more details.\n",
       "  warnings.warn(\n",
-      "c:\\Users\\j_aka\\anaconda3\\envs\\statistique\\Lib\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n",
-      "Downloading artifacts: 100%|██████████| 7/7 [00:00<?, ?it/s]\n"
+      "Downloading artifacts: 100%|██████████| 7/7 [00:00<00:00, 328.25it/s]\n"
      ]
     },
     {
@@ -310,9 +308,9 @@
      "output_type": "stream",
      "text": [
       "✅ Modèle entraîné et logué dans MLflow avec succès.\n",
-      "📊 Métriques : {'accuracy': 0.8459413840724259, 'precision': 0.7480314960629921, 'recall': 0.4602076124567474, 'f1': 0.5698371893744645}\n",
-      "🏃 View run RDF_Run at: http://127.0.0.1:8080/#/experiments/668826699846372727/runs/c368193dd0ac43f69bcf8a448fe5de99\n",
-      "🧪 View experiment at: http://127.0.0.1:8080/#/experiments/668826699846372727\n"
+      "📊 Métriques : {'accuracy': 0.8462482737455884, 'precision': 0.7502824858757062, 'recall': 0.45951557093425605, 'f1': 0.5699570815450644}\n",
+      "🏃 View run RLG_Run at: http://127.0.0.1:8080/#/experiments/389458555972686615/runs/850dda1225fd49bcbbfe8f550607ffb2\n",
+      "🧪 View experiment at: http://127.0.0.1:8080/#/experiments/389458555972686615\n"
      ]
     }
    ],
@@ -358,7 +356,7 @@
     "# Encodage et entrainement du modèle \n",
     "    pipeline_fr = Pipeline(steps=[\n",
     "    (\"processor\", preprocessor),\n",
-    "    (\"model\", LogisticRegression(max_iter=1000))\n",
+    "    (\"model\", LogisticRegression(max_iter=3000))\n",
     "   ])\n",
     "    \n",
     "# Entrainement du modèle\n",
@@ -379,7 +377,7 @@
     "    mlflow.log_metrics(metrics)\n",
     "    mlflow.sklearn.log_model(\n",
     "        sk_model= pipeline_fr, \n",
-    "        input_example=X_val.iloc[:5], \n",
+    "        input_example=X_val, \n",
     "        artifact_path=artifact_path\n",
     "    ) \n",
     "\n",
