maj des hyperparamètres

--- a/TREE_ALGO.ipynb
+++ b/TREE_ALGO.ipynb
@@ -143,7 +143,7 @@
     "params = {\n",
     "    \"criterion\": \"gini\",\n",
     "    \"max_depth\": 10,\n",
-    "    \"min_samples_split\": 5,\n",
+    "    \"min_samples_split\": 10,\n",
     "    \"min_samples_leaf\": 4,\n",
     "    \"random_state\": 42\n",
     "}\n",
@@ -190,6 +190,32 @@
     "\n",
     "    print(\"✅ Modèle entraîné et logué dans MLflow avec succès.\")\n",
     "    print(\"📊 Métriques :\", metrics)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d9069900",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.metrics import mean_squared_error, r2_score\n",
+    "import numpy as np\n",
+    "\n",
+    "# Prédictions\n",
+    "y_train_pred = pipeline_fr.predict(X_train)\n",
+    "y_val_pred = pipeline_fr.predict(X_val)\n",
+    "\n",
+    "# Métriques\n",
+    "train_rmse = np.sqrt(mean_squared_error(y_train, y_train_pred))\n",
+    "val_rmse = np.sqrt(mean_squared_error(y_val, y_val_pred))\n",
+    "\n",
+    "\n",
+    "train_r2 = r2_score(y_train, y_train_pred)\n",
+    "val_r2 = r2_score(y_val, y_val_pred)\n",
+    "\n",
+    "print(train_r2)\n",
+    "print(val_r2)"
    ]
   }
  ],
