--- a/RDF_ALGO.ipynb
+++ b/RDF_ALGO.ipynb
@@ -158,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "id": "5f06e5e8",
    "metadata": {},
    "outputs": [],
@@ -172,9 +172,21 @@
     "from sklearn.preprocessing import OneHotEncoder\n",
     "from sklearn.pipeline import Pipeline\n",
     "from pprint import pprint\n",
+    "import joblib\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.metrics import mean_absolute_error, mean_squared_error, r2_score\n",
     "from sklearn.metrics import accuracy_score, precision_score, recall_score, f1_score"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0763b881",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "joblib.dump(pipeline, \"models/rdf_pipeline.pkl\")"
    ]
   },
   {
