--- a/TREE_ALGO.ipynb
+++ b/TREE_ALGO.ipynb
@@ -10,20 +10,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "9a99b9fd",
    "metadata": {},
    "outputs": [],
    "source": [
-    "!pip install mlflow\n",
-    "!pip install --upgrade jinja2\n",
-    "!pip install --upgrade Flask\n",
-    "!pip install setuptools"
+    "#!pip install mlflow\n",
+    "#!pip install --upgrade jinja2\n",
+    "#!pip install --upgrade Flask\n",
+    "#!pip install setuptools"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "1e208dca",
    "metadata": {},
    "outputs": [],
@@ -40,12 +40,12 @@
     "from pprint import pprint\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.metrics import mean_absolute_error, mean_squared_error, r2_score\n",
-    "from sklearn.metrics import accuracy_score, precision_score, recall_score, f1_score"
+    "from sklearn.metrics import accuracy_score, precision_score, recall_score, f1_score , classification_report, confusion_matrix"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "1ee6a796",
    "metadata": {},
    "outputs": [],
@@ -58,10 +58,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "aa9c2ff4",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[<Experiment: artifact_location='mlflow-artifacts:/606383372813198707', creation_time=1760806668542, experiment_id='606383372813198707', last_update_time=1760806668542, lifecycle_stage='active', name='TREE_Models', tags={'mlflow.experimentKind': 'custom_model_development'}>, <Experiment: artifact_location='mlflow-artifacts:/389458555972686615', creation_time=1760804935652, experiment_id='389458555972686615', last_update_time=1760804935652, lifecycle_stage='active', name='RLG_Models', tags={'mlflow.experimentKind': 'custom_model_development'}>, <Experiment: artifact_location='mlflow-artifacts:/668826699846372727', creation_time=1760799130123, experiment_id='668826699846372727', last_update_time=1760799130123, lifecycle_stage='active', name='RDF_Models', tags={'mlflow.experimentKind': 'custom_model_development'}>, <Experiment: artifact_location='mlflow-artifacts:/0', creation_time=1760798921200, experiment_id='0', last_update_time=1760798921200, lifecycle_stage='active', name='Default', tags={}>]\n"
+     ]
+    }
+   ],
    "source": [
     "# Récupération de toutes les expériences MLflow\n",
     "all_experiments = client.search_experiments()\n",
@@ -71,10 +79,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "eb7e4ae9",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[<Experiment: artifact_location='mlflow-artifacts:/606383372813198707', creation_time=1760806668542, experiment_id='606383372813198707', last_update_time=1760806668542, lifecycle_stage='active', name='TREE_Models', tags={'mlflow.experimentKind': 'custom_model_development'}>]"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Recherche des expériences Mlflow Spécifique.\n",
     "client.search_experiments(filter_string=\"name = 'TREE_Models'\")"
@@ -90,10 +109,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "add13bcb",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   person_age  person_income person_home_ownership  person_emp_length loan_intent loan_grade  loan_amnt  loan_int_rate  loan_status  loan_percent_income cb_person_default_on_file  cb_person_cred_hist_length\n",
+      "0          22          59000                  RENT              123.0    PERSONAL          D      35000          16.02            1                 0.59                         Y                           3\n",
+      "1          21           9600                   OWN                5.0   EDUCATION          B       1000          11.14            0                 0.10                         N                           2\n",
+      "2          25           9600              MORTGAGE                1.0     MEDICAL          C       5500          12.87            1                 0.57                         N                           3\n"
+     ]
+    }
+   ],
    "source": [
     "# Définition du chemin vers le fichier de  données \n",
     "data_dir = r\"C:\\Users\\j_aka\\Desktop\\mlops\\credit_risk_dataset.csv\"\n",
@@ -116,7 +146,45 @@
    "execution_count": null,
    "id": "31d5b588",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2025/10/19 13:33:54 WARNING mlflow.models.model: `artifact_path` is deprecated. Please use `name` instead.\n",
+      "c:\\Users\\j_aka\\anaconda3\\envs\\statistique\\Lib\\site-packages\\mlflow\\types\\utils.py:452: UserWarning: Hint: Inferred schema contains integer column(s). Integer columns in Python cannot represent missing values. If your input data contains missing values at inference time, it will be encoded as floats and will cause a schema enforcement error. The best way to avoid this problem is to infer the model schema based on a realistic data sample (training dataset) that includes missing values. Alternatively, you can declare integer columns as doubles (float64) whenever these columns may have missing values. See `Handling Integers With Missing Values <https://www.mlflow.org/docs/latest/models.html#handling-integers-with-missing-values>`_ for more details.\n",
+      "  warnings.warn(\n",
+      "c:\\Users\\j_aka\\anaconda3\\envs\\statistique\\Lib\\site-packages\\mlflow\\types\\utils.py:452: UserWarning: Hint: Inferred schema contains integer column(s). Integer columns in Python cannot represent missing values. If your input data contains missing values at inference time, it will be encoded as floats and will cause a schema enforcement error. The best way to avoid this problem is to infer the model schema based on a realistic data sample (training dataset) that includes missing values. Alternatively, you can declare integer columns as doubles (float64) whenever these columns may have missing values. See `Handling Integers With Missing Values <https://www.mlflow.org/docs/latest/models.html#handling-integers-with-missing-values>`_ for more details.\n",
+      "  warnings.warn(\n",
+      "Downloading artifacts: 100%|██████████| 7/7 [00:00<00:00, 1399.57it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "✅ Modèle entraîné et logué dans MLflow avec succès.\n",
+      "\n",
+      "Rapport de classification :\n",
+      "               precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.92      0.99      0.95      5072\n",
+      "           1       0.94      0.71      0.81      1445\n",
+      "\n",
+      "    accuracy                           0.93      6517\n",
+      "   macro avg       0.93      0.85      0.88      6517\n",
+      "weighted avg       0.93      0.93      0.92      6517\n",
+      "\n",
+      "\n",
+      "Matrice de confusion :\n",
+      " [[5004   68]\n",
+      " [ 420 1025]]\n",
+      "📊 Métriques : {'accuracy': 0.9251189197483505, 'precision': 0.9377859103385179, 'recall': 0.7093425605536332, 'f1': 0.8077226162332545}\n",
+      "🏃 View run TREE_Run at: http://127.0.0.1:8080/#/experiments/606383372813198707/runs/3b3a105dba904beabd5e18a267368ccc\n",
+      "🧪 View experiment at: http://127.0.0.1:8080/#/experiments/606383372813198707\n"
+     ]
+    }
+   ],
    "source": [
     "# Définition des Features et de la cible \n",
     "target_col = 'loan_status'\n",
@@ -170,7 +238,10 @@
     "    pipeline_fr.fit(X_train,y_train)\n",
     "\n",
     "# Prédiction du modèle\n",
-    "    y_pred = pipeline_fr.predict(X_val)\n",
+    "    y_proba = pipeline_fr.predict_proba(X_val)[:, 1]\n",
+    "    y_pred = (y_proba >= 0.3).astype(int)\n",
+    "\n",
+    "\n",
     "\n",
     "# Calcul des métriques\n",
     "    accuracy = accuracy_score(y_val, y_pred)\n",
@@ -189,15 +260,26 @@
     "    ) \n",
     "\n",
     "    print(\"✅ Modèle entraîné et logué dans MLflow avec succès.\")\n",
+    "    print(\"\\nRapport de classification :\\n\", classification_report(y_val, y_pred))\n",
+    "    print(\"\\nMatrice de confusion :\\n\", confusion_matrix(y_val, y_pred))\n",
     "    print(\"📊 Métriques :\", metrics)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "id": "d9069900",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.6151228957754777\n",
+      "0.5838532740986542\n"
+     ]
+    }
+   ],
    "source": [
     "from sklearn.metrics import mean_squared_error, r2_score\n",
     "import numpy as np\n",
