Mise à jour des notebooks et du script Import_model; suppression de app.py

--- a/RDF_ALGO.ipynb
+++ b/RDF_ALGO.ipynb
@@ -300,7 +300,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2025/10/19 13:03:39 WARNING mlflow.models.model: `artifact_path` is deprecated. Please use `name` instead.\n",
+      "2025/10/19 13:39:21 WARNING mlflow.models.model: `artifact_path` is deprecated. Please use `name` instead.\n",
       "c:\\Users\\j_aka\\anaconda3\\envs\\mlops_projet\\Lib\\site-packages\\mlflow\\types\\utils.py:452: UserWarning: Hint: Inferred schema contains integer column(s). Integer columns in Python cannot represent missing values. If your input data contains missing values at inference time, it will be encoded as floats and will cause a schema enforcement error. The best way to avoid this problem is to infer the model schema based on a realistic data sample (training dataset) that includes missing values. Alternatively, you can declare integer columns as doubles (float64) whenever these columns may have missing values. See `Handling Integers With Missing Values <https://www.mlflow.org/docs/latest/models.html#handling-integers-with-missing-values>`_ for more details.\n",
       "  warnings.warn(\n",
       "c:\\Users\\j_aka\\anaconda3\\envs\\mlops_projet\\Lib\\site-packages\\mlflow\\types\\utils.py:452: UserWarning: Hint: Inferred schema contains integer column(s). Integer columns in Python cannot represent missing values. If your input data contains missing values at inference time, it will be encoded as floats and will cause a schema enforcement error. The best way to avoid this problem is to infer the model schema based on a realistic data sample (training dataset) that includes missing values. Alternatively, you can declare integer columns as doubles (float64) whenever these columns may have missing values. See `Handling Integers With Missing Values <https://www.mlflow.org/docs/latest/models.html#handling-integers-with-missing-values>`_ for more details.\n",
@@ -316,19 +316,19 @@
       "Rapport de classification :\n",
       "               precision    recall  f1-score   support\n",
       "\n",
-      "           0       0.91      1.00      0.95      5072\n",
-      "           1       0.98      0.67      0.79      1445\n",
+      "           0       0.93      0.93      0.93      5072\n",
+      "           1       0.76      0.75      0.75      1445\n",
       "\n",
-      "    accuracy                           0.92      6517\n",
-      "   macro avg       0.95      0.83      0.87      6517\n",
-      "weighted avg       0.93      0.92      0.92      6517\n",
+      "    accuracy                           0.89      6517\n",
+      "   macro avg       0.85      0.84      0.84      6517\n",
+      "weighted avg       0.89      0.89      0.89      6517\n",
       "\n",
       "\n",
       "Matrice de confusion :\n",
-      " [[5050   22]\n",
-      " [ 483  962]]\n",
-      "Métriques : {'accuracy': 0.9225103575264693, 'precision': 0.9776422764227642, 'recall': 0.6657439446366782, 'f1': 0.7920955125566077}\n",
-      "🏃 View run RDF_Run at: http://127.0.0.1:8080/#/experiments/668826699846372727/runs/314e2e6d576b451d9f692cc307dfee8b\n",
+      " [[4739  333]\n",
+      " [ 368 1077]]\n",
+      "Métriques : {'accuracy': 0.8924351695565444, 'precision': 0.7638297872340426, 'recall': 0.7453287197231834, 'f1': 0.7544658493870403}\n",
+      "🏃 View run RDF_Run at: http://127.0.0.1:8080/#/experiments/668826699846372727/runs/114c4c96c085420c868f1e4bf1b6fad6\n",
       "🧪 View experiment at: http://127.0.0.1:8080/#/experiments/668826699846372727\n"
      ]
     }
@@ -371,7 +371,7 @@
     "# les artefacts du modèle\n",
     "artifact_path = \"RDF_artefacts\"\n",
     "# Fermer tout run précédent\n",
-    "mlflow.end_run()\n",
+    "#mlflow.end_run()\n",
     "\n",
     "with mlflow.start_run(run_name=run_name):\n",
     "    # Tag de version du modèle\n",
