--- a/RGL_ALGO.ipynb
+++ b/RGL_ALGO.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "9a99b9fd",
    "metadata": {},
    "outputs": [],
@@ -23,19 +23,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "1e208dca",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\j_aka\\anaconda3\\envs\\statistique\\Lib\\site-packages\\requests\\__init__.py:86: RequestsDependencyWarning: Unable to find acceptable character detection dependency (chardet or charset_normalizer).\n",
-      "  warnings.warn(\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "## Import de librairie\n",
     "import pandas as pd\n",
@@ -54,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "1ee6a796",
    "metadata": {},
    "outputs": [],
@@ -67,18 +58,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "aa9c2ff4",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[<Experiment: artifact_location='mlflow-artifacts:/606383372813198707', creation_time=1760806668542, experiment_id='606383372813198707', last_update_time=1760806668542, lifecycle_stage='active', name='TREE_Models', tags={'mlflow.experimentKind': 'custom_model_development'}>, <Experiment: artifact_location='mlflow-artifacts:/389458555972686615', creation_time=1760804935652, experiment_id='389458555972686615', last_update_time=1760804935652, lifecycle_stage='active', name='RLG_Models', tags={'mlflow.experimentKind': 'custom_model_development'}>, <Experiment: artifact_location='mlflow-artifacts:/668826699846372727', creation_time=1760799130123, experiment_id='668826699846372727', last_update_time=1760799130123, lifecycle_stage='active', name='RDF_Models', tags={'mlflow.experimentKind': 'custom_model_development'}>, <Experiment: artifact_location='mlflow-artifacts:/0', creation_time=1760798921200, experiment_id='0', last_update_time=1760798921200, lifecycle_stage='active', name='Default', tags={}>]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Récupération de toutes les expériences MLflow\n",
     "all_experiments = client.search_experiments()\n",
@@ -88,21 +71,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "eb7e4ae9",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[<Experiment: artifact_location='mlflow-artifacts:/389458555972686615', creation_time=1760804935652, experiment_id='389458555972686615', last_update_time=1760804935652, lifecycle_stage='active', name='RLG_Models', tags={'mlflow.experimentKind': 'custom_model_development'}>]"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Recherche des expériences Mlflow Spécifique.\n",
     "client.search_experiments(filter_string=\"name = 'RLG_Models'\")"
@@ -118,21 +90,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "add13bcb",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "   person_age  person_income person_home_ownership  person_emp_length loan_intent loan_grade  loan_amnt  loan_int_rate  loan_status  loan_percent_income cb_person_default_on_file  cb_person_cred_hist_length\n",
-      "0          22          59000                  RENT              123.0    PERSONAL          D      35000          16.02            1                 0.59                         Y                           3\n",
-      "1          21           9600                   OWN                5.0   EDUCATION          B       1000          11.14            0                 0.10                         N                           2\n",
-      "2          25           9600              MORTGAGE                1.0     MEDICAL          C       5500          12.87            1                 0.57                         N                           3\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Définition du chemin vers le fichier de  données \n",
     "data_dir = r\"C:\\Users\\j_aka\\Desktop\\mlops\\credit_risk_dataset.csv\"\n",
@@ -155,56 +116,7 @@
    "execution_count": null,
    "id": "31d5b588",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\j_aka\\anaconda3\\envs\\statistique\\Lib\\site-packages\\sklearn\\linear_model\\_logistic.py:473: ConvergenceWarning: lbfgs failed to converge after 3000 iteration(s) (status=1):\n",
-      "STOP: TOTAL NO. OF ITERATIONS REACHED LIMIT\n",
-      "\n",
-      "Increase the number of iterations to improve the convergence (max_iter=3000).\n",
-      "You might also want to scale the data as shown in:\n",
-      "    https://scikit-learn.org/stable/modules/preprocessing.html\n",
-      "Please also refer to the documentation for alternative solver options:\n",
-      "    https://scikit-learn.org/stable/modules/linear_model.html#logistic-regression\n",
-      "  n_iter_i = _check_optimize_result(\n",
-      "2025/10/19 13:13:26 WARNING mlflow.models.model: `artifact_path` is deprecated. Please use `name` instead.\n",
-      "c:\\Users\\j_aka\\anaconda3\\envs\\statistique\\Lib\\site-packages\\mlflow\\types\\utils.py:452: UserWarning: Hint: Inferred schema contains integer column(s). Integer columns in Python cannot represent missing values. If your input data contains missing values at inference time, it will be encoded as floats and will cause a schema enforcement error. The best way to avoid this problem is to infer the model schema based on a realistic data sample (training dataset) that includes missing values. Alternatively, you can declare integer columns as doubles (float64) whenever these columns may have missing values. See `Handling Integers With Missing Values <https://www.mlflow.org/docs/latest/models.html#handling-integers-with-missing-values>`_ for more details.\n",
-      "  warnings.warn(\n",
-      "c:\\Users\\j_aka\\anaconda3\\envs\\statistique\\Lib\\site-packages\\mlflow\\types\\utils.py:452: UserWarning: Hint: Inferred schema contains integer column(s). Integer columns in Python cannot represent missing values. If your input data contains missing values at inference time, it will be encoded as floats and will cause a schema enforcement error. The best way to avoid this problem is to infer the model schema based on a realistic data sample (training dataset) that includes missing values. Alternatively, you can declare integer columns as doubles (float64) whenever these columns may have missing values. See `Handling Integers With Missing Values <https://www.mlflow.org/docs/latest/models.html#handling-integers-with-missing-values>`_ for more details.\n",
-      "  warnings.warn(\n",
-      "c:\\Users\\j_aka\\anaconda3\\envs\\statistique\\Lib\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n",
-      "Downloading artifacts: 100%|██████████| 7/7 [00:00<00:00, 466.15it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "✅ Modèle entraîné et logué dans MLflow avec succès.\n",
-      "\n",
-      "Rapport de classification :\n",
-      "               precision    recall  f1-score   support\n",
-      "\n",
-      "           0       0.86      0.96      0.91      5072\n",
-      "           1       0.75      0.46      0.57      1445\n",
-      "\n",
-      "    accuracy                           0.85      6517\n",
-      "   macro avg       0.81      0.71      0.74      6517\n",
-      "weighted avg       0.84      0.85      0.83      6517\n",
-      "\n",
-      "\n",
-      "Matrice de confusion :\n",
-      " [[4850  222]\n",
-      " [ 776  669]]\n",
-      "📊 Métriques : {'accuracy': 0.8468620530919134, 'precision': 0.7508417508417509, 'recall': 0.4629757785467128, 'f1': 0.5727739726027398}\n",
-      "🏃 View run RLG_Run at: http://127.0.0.1:8080/#/experiments/389458555972686615/runs/a58f24bbc7534a6a88d4f4ae7cc12c9d\n",
-      "🧪 View experiment at: http://127.0.0.1:8080/#/experiments/389458555972686615\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Définition des Features et de la cible \n",
     "target_col = 'loan_status'\n",
@@ -282,7 +194,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "statistique",
+   "display_name": "mlops_projet",
    "language": "python",
    "name": "python3"
   },
@@ -296,7 +208,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.11"
+   "version": "3.12.12"
   }
  },
  "nbformat": 4,
