--- a/TREE_ALGO.ipynb
+++ b/TREE_ALGO.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 1,
    "id": "9a99b9fd",
    "metadata": {},
    "outputs": [],
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
    "id": "1e208dca",
    "metadata": {},
    "outputs": [],
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "id": "1ee6a796",
    "metadata": {},
    "outputs": [],
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 4,
    "id": "aa9c2ff4",
    "metadata": {},
    "outputs": [
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 5,
    "id": "eb7e4ae9",
    "metadata": {},
    "outputs": [
@@ -89,7 +89,7 @@
        "[<Experiment: artifact_location='mlflow-artifacts:/606383372813198707', creation_time=1760806668542, experiment_id='606383372813198707', last_update_time=1760806668542, lifecycle_stage='active', name='TREE_Models', tags={'mlflow.experimentKind': 'custom_model_development'}>]"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -109,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 6,
    "id": "add13bcb",
    "metadata": {},
    "outputs": [
@@ -151,12 +151,11 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2025/10/19 13:33:54 WARNING mlflow.models.model: `artifact_path` is deprecated. Please use `name` instead.\n",
-      "c:\\Users\\j_aka\\anaconda3\\envs\\statistique\\Lib\\site-packages\\mlflow\\types\\utils.py:452: UserWarning: Hint: Inferred schema contains integer column(s). Integer columns in Python cannot represent missing values. If your input data contains missing values at inference time, it will be encoded as floats and will cause a schema enforcement error. The best way to avoid this problem is to infer the model schema based on a realistic data sample (training dataset) that includes missing values. Alternatively, you can declare integer columns as doubles (float64) whenever these columns may have missing values. See `Handling Integers With Missing Values <https://www.mlflow.org/docs/latest/models.html#handling-integers-with-missing-values>`_ for more details.\n",
+      "2025/10/19 16:20:23 WARNING mlflow.models.model: `artifact_path` is deprecated. Please use `name` instead.\n",
+      "c:\\Users\\j_aka\\anaconda3\\envs\\mlops_projet\\Lib\\site-packages\\mlflow\\types\\utils.py:452: UserWarning: Hint: Inferred schema contains integer column(s). Integer columns in Python cannot represent missing values. If your input data contains missing values at inference time, it will be encoded as floats and will cause a schema enforcement error. The best way to avoid this problem is to infer the model schema based on a realistic data sample (training dataset) that includes missing values. Alternatively, you can declare integer columns as doubles (float64) whenever these columns may have missing values. See `Handling Integers With Missing Values <https://www.mlflow.org/docs/latest/models.html#handling-integers-with-missing-values>`_ for more details.\n",
       "  warnings.warn(\n",
-      "c:\\Users\\j_aka\\anaconda3\\envs\\statistique\\Lib\\site-packages\\mlflow\\types\\utils.py:452: UserWarning: Hint: Inferred schema contains integer column(s). Integer columns in Python cannot represent missing values. If your input data contains missing values at inference time, it will be encoded as floats and will cause a schema enforcement error. The best way to avoid this problem is to infer the model schema based on a realistic data sample (training dataset) that includes missing values. Alternatively, you can declare integer columns as doubles (float64) whenever these columns may have missing values. See `Handling Integers With Missing Values <https://www.mlflow.org/docs/latest/models.html#handling-integers-with-missing-values>`_ for more details.\n",
-      "  warnings.warn(\n",
-      "Downloading artifacts: 100%|██████████| 7/7 [00:00<00:00, 1399.57it/s]\n"
+      "c:\\Users\\j_aka\\anaconda3\\envs\\mlops_projet\\Lib\\site-packages\\mlflow\\types\\utils.py:452: UserWarning: Hint: Inferred schema contains integer column(s). Integer columns in Python cannot represent missing values. If your input data contains missing values at inference time, it will be encoded as floats and will cause a schema enforcement error. The best way to avoid this problem is to infer the model schema based on a realistic data sample (training dataset) that includes missing values. Alternatively, you can declare integer columns as doubles (float64) whenever these columns may have missing values. See `Handling Integers With Missing Values <https://www.mlflow.org/docs/latest/models.html#handling-integers-with-missing-values>`_ for more details.\n",
+      "  warnings.warn(\n"
      ]
     },
     {
@@ -168,19 +167,19 @@
       "Rapport de classification :\n",
       "               precision    recall  f1-score   support\n",
       "\n",
-      "           0       0.92      0.99      0.95      5072\n",
-      "           1       0.94      0.71      0.81      1445\n",
+      "           0       0.92      0.98      0.95      5072\n",
+      "           1       0.91      0.72      0.80      1445\n",
       "\n",
-      "    accuracy                           0.93      6517\n",
-      "   macro avg       0.93      0.85      0.88      6517\n",
-      "weighted avg       0.93      0.93      0.92      6517\n",
+      "    accuracy                           0.92      6517\n",
+      "   macro avg       0.92      0.85      0.88      6517\n",
+      "weighted avg       0.92      0.92      0.92      6517\n",
       "\n",
       "\n",
       "Matrice de confusion :\n",
-      " [[5004   68]\n",
-      " [ 420 1025]]\n",
-      "📊 Métriques : {'accuracy': 0.9251189197483505, 'precision': 0.9377859103385179, 'recall': 0.7093425605536332, 'f1': 0.8077226162332545}\n",
-      "🏃 View run TREE_Run at: http://127.0.0.1:8080/#/experiments/606383372813198707/runs/3b3a105dba904beabd5e18a267368ccc\n",
+      " [[4972  100]\n",
+      " [ 410 1035]]\n",
+      "📊 Métriques : {'accuracy': 0.921743133343563, 'precision': 0.9118942731277533, 'recall': 0.7162629757785467, 'f1': 0.8023255813953488}\n",
+      "🏃 View run TREE_Run at: http://127.0.0.1:8080/#/experiments/606383372813198707/runs/401b7b68908840948320077326fc2bef\n",
       "🧪 View experiment at: http://127.0.0.1:8080/#/experiments/606383372813198707\n"
      ]
     }
@@ -222,7 +221,7 @@
     "# les artefacts du modèle\n",
     "artifact_path = \"TREE_artefacts\"\n",
     "# Fermer tout run précédent\n",
-    "mlflow.end_run()\n",
+    "#mlflow.end_run()\n",
     "\n",
     "with mlflow.start_run(run_name=run_name):\n",
     "    # Tag de version du modèle\n",
@@ -256,7 +255,7 @@
     "    mlflow.sklearn.log_model(\n",
     "        sk_model= pipeline_fr, \n",
     "        input_example=X_val, \n",
-    "        artifact_path=artifact_path\n",
+    "        artifact_path= artifact_path\n",
     "    ) \n",
     "\n",
     "    print(\"✅ Modèle entraîné et logué dans MLflow avec succès.\")\n",
@@ -267,7 +266,121 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 8,
+   "id": "97549ad1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3.5.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "import mlflow\n",
+    "print(mlflow.__version__)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "36bdf355",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Nom : TREE_Models | ID : 606383372813198707\n",
+      "Nom : RLG_Models | ID : 389458555972686615\n",
+      "Nom : RDF_Models | ID : 668826699846372727\n",
+      "Nom : Default | ID : 0\n"
+     ]
+    }
+   ],
+   "source": [
+    "import mlflow\n",
+    "\n",
+    "experiments = mlflow.search_experiments()\n",
+    "for exp in experiments:\n",
+    "    print(f\"Nom : {exp.name} | ID : {exp.experiment_id}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "26c54bbb",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Run ID : 401b7b68908840948320077326fc2bef\n",
+      "Artefacts : mlflow-artifacts:/606383372813198707/401b7b68908840948320077326fc2bef/artifacts\n",
+      "Run ID : f55fcd44eb874d41a9bc1a8bccdddcdc\n",
+      "Artefacts : mlflow-artifacts:/606383372813198707/f55fcd44eb874d41a9bc1a8bccdddcdc/artifacts\n",
+      "Run ID : 990f13fdba71400f8bc519d45326c5c4\n",
+      "Artefacts : mlflow-artifacts:/606383372813198707/990f13fdba71400f8bc519d45326c5c4/artifacts\n",
+      "Run ID : b7ad840cf8e648bab020b034954d92f4\n",
+      "Artefacts : mlflow-artifacts:/606383372813198707/b7ad840cf8e648bab020b034954d92f4/artifacts\n",
+      "Run ID : 3b3a105dba904beabd5e18a267368ccc\n",
+      "Artefacts : mlflow-artifacts:/606383372813198707/3b3a105dba904beabd5e18a267368ccc/artifacts\n",
+      "Run ID : 4ed00a71bbb94973b62828662e438dc4\n",
+      "Artefacts : mlflow-artifacts:/606383372813198707/4ed00a71bbb94973b62828662e438dc4/artifacts\n",
+      "Run ID : b83c4cd06ad04d17a8f485050210adde\n",
+      "Artefacts : mlflow-artifacts:/606383372813198707/b83c4cd06ad04d17a8f485050210adde/artifacts\n"
+     ]
+    }
+   ],
+   "source": [
+    "from mlflow.tracking import MlflowClient\n",
+    "\n",
+    "client = MlflowClient()\n",
+    "runs = client.search_runs(\n",
+    "    experiment_ids=[\"606383372813198707\"],\n",
+    "    filter_string=\"tags.version = 'v1.0'\"\n",
+    ")\n",
+    "\n",
+    "for run in runs:\n",
+    "    print(\"Run ID :\", run.info.run_id)\n",
+    "    print(\"Artefacts :\", run.info.artifact_uri)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "6edea9fa",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "📦 TREE_artefacts/MLmodel\n",
+      "📦 TREE_artefacts/conda.yaml\n",
+      "📦 TREE_artefacts/input_example.json\n",
+      "📦 TREE_artefacts/model.pkl\n",
+      "📦 TREE_artefacts/python_env.yaml\n",
+      "📦 TREE_artefacts/requirements.txt\n",
+      "📦 TREE_artefacts/serving_input_example.json\n"
+     ]
+    }
+   ],
+   "source": [
+    "from mlflow.tracking import MlflowClient\n",
+    "\n",
+    "artifacts = client.list_artifacts(\"b7ad840cf8e648bab020b034954d92f4\", path=\"TREE_artefacts\")\n",
+    "\n",
+    "for artifact in artifacts:\n",
+    "    print(\"📦\", artifact.path)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
    "id": "d9069900",
    "metadata": {},
    "outputs": [
@@ -303,7 +416,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "statistique",
+   "display_name": "mlops_projet",
    "language": "python",
    "name": "python3"
   },
@@ -317,7 +430,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.11"
+   "version": "3.12.12"
   }
  },
  "nbformat": 4,
