Ajout des modifications des notebook et de l'app

--- a/RGL_ALGO.ipynb
+++ b/RGL_ALGO.ipynb
@@ -150,7 +150,7 @@
     "# les artefacts du modèle\n",
     "artifact_path = \"RLG_artefacts\"\n",
     "# Fermer tout run précédent\n",
-    "mlflow.end_run()\n",
+    "#mlflow.end_run()\n",
     "\n",
     "with mlflow.start_run(run_name=run_name):\n",
     "    # Tag de version du modèle\n",
