--- a/TREE_ALGO.ipynb
+++ b/TREE_ALGO.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 13,
    "id": "9a99b9fd",
    "metadata": {},
    "outputs": [],
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 14,
    "id": "1e208dca",
    "metadata": {},
    "outputs": [],
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 15,
    "id": "1ee6a796",
    "metadata": {},
    "outputs": [],
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 16,
    "id": "aa9c2ff4",
    "metadata": {},
    "outputs": [
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 17,
    "id": "eb7e4ae9",
    "metadata": {},
    "outputs": [
@@ -89,7 +89,7 @@
        "[<Experiment: artifact_location='mlflow-artifacts:/606383372813198707', creation_time=1760806668542, experiment_id='606383372813198707', last_update_time=1760806668542, lifecycle_stage='active', name='TREE_Models', tags={'mlflow.experimentKind': 'custom_model_development'}>]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -109,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 18,
    "id": "add13bcb",
    "metadata": {},
    "outputs": [
@@ -143,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "id": "31d5b588",
    "metadata": {},
    "outputs": [
@@ -151,7 +151,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2025/10/19 16:20:23 WARNING mlflow.models.model: `artifact_path` is deprecated. Please use `name` instead.\n",
+      "2025/10/19 16:54:02 WARNING mlflow.models.model: `artifact_path` is deprecated. Please use `name` instead.\n",
       "c:\\Users\\j_aka\\anaconda3\\envs\\mlops_projet\\Lib\\site-packages\\mlflow\\types\\utils.py:452: UserWarning: Hint: Inferred schema contains integer column(s). Integer columns in Python cannot represent missing values. If your input data contains missing values at inference time, it will be encoded as floats and will cause a schema enforcement error. The best way to avoid this problem is to infer the model schema based on a realistic data sample (training dataset) that includes missing values. Alternatively, you can declare integer columns as doubles (float64) whenever these columns may have missing values. See `Handling Integers With Missing Values <https://www.mlflow.org/docs/latest/models.html#handling-integers-with-missing-values>`_ for more details.\n",
       "  warnings.warn(\n",
       "c:\\Users\\j_aka\\anaconda3\\envs\\mlops_projet\\Lib\\site-packages\\mlflow\\types\\utils.py:452: UserWarning: Hint: Inferred schema contains integer column(s). Integer columns in Python cannot represent missing values. If your input data contains missing values at inference time, it will be encoded as floats and will cause a schema enforcement error. The best way to avoid this problem is to infer the model schema based on a realistic data sample (training dataset) that includes missing values. Alternatively, you can declare integer columns as doubles (float64) whenever these columns may have missing values. See `Handling Integers With Missing Values <https://www.mlflow.org/docs/latest/models.html#handling-integers-with-missing-values>`_ for more details.\n",
@@ -179,7 +179,7 @@
       " [[4972  100]\n",
       " [ 410 1035]]\n",
       "📊 Métriques : {'accuracy': 0.921743133343563, 'precision': 0.9118942731277533, 'recall': 0.7162629757785467, 'f1': 0.8023255813953488}\n",
-      "🏃 View run TREE_Run at: http://127.0.0.1:8080/#/experiments/606383372813198707/runs/401b7b68908840948320077326fc2bef\n",
+      "🏃 View run TREE_Run at: http://127.0.0.1:8080/#/experiments/606383372813198707/runs/94de67fef43d490cae55569de39b17c3\n",
       "🧪 View experiment at: http://127.0.0.1:8080/#/experiments/606383372813198707\n"
      ]
     }
@@ -266,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 20,
    "id": "97549ad1",
    "metadata": {},
    "outputs": [
@@ -285,7 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 21,
    "id": "36bdf355",
    "metadata": {},
    "outputs": [
@@ -310,7 +310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 22,
    "id": "26c54bbb",
    "metadata": {},
    "outputs": [
@@ -318,6 +318,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Run ID : 94de67fef43d490cae55569de39b17c3\n",
+      "Artefacts : mlflow-artifacts:/606383372813198707/94de67fef43d490cae55569de39b17c3/artifacts\n",
       "Run ID : 401b7b68908840948320077326fc2bef\n",
       "Artefacts : mlflow-artifacts:/606383372813198707/401b7b68908840948320077326fc2bef/artifacts\n",
       "Run ID : f55fcd44eb874d41a9bc1a8bccdddcdc\n",
@@ -351,7 +353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 23,
    "id": "6edea9fa",
    "metadata": {},
    "outputs": [
@@ -380,7 +382,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 24,
    "id": "d9069900",
    "metadata": {},
    "outputs": [
